# lunachat

./: .env  .gitignore  Cargo.toml  blog.html  deploy.php  docker-compose.yml  index.html  showcase.html  styles.css
config/: Caddyfile  rust.Dockerfile
lunachat/: Cargo.toml
lunachat/src/: auth.rs  lib.rs  prelude.rs  sanitizer.rs
lunachat/src/entity/: mod.rs  post.rs  thread.rs  user.rs
lunachat/src/templates/: forum.rs  login.rs  mod.rs  thread.rs  user.rs
lunachat/src/templates/partial/: post.rs  thread.rs
lunachat/static/: styles.css
lunachat/templates/: base.html.jinja  forum.html.jinja  login.html.jinja  thread.html.jinja  user.html.jinja
lunachat/templates/partial/: post.html.jinja  thread.html.jinja
public/: styles.css
src/: auth.rs  comm.rs  error.rs  lib.rs  main.rs  state.rs  templates.rs  utils.rs  versioning.rs
src/state/: key.rs  mod.rs  post.rs  thread.rs  user.rs
src/templates/: forum.rs  login.rs  mod.rs  partial.rs  thread.rs  user.rs
src/templates/partial/: mod.rs  post.rs  thread.rs
static/: forum.css  index.css  styles.css
templates/: base.html.jinja  base_undefaulted.html.jinja  forum.html.jinja  forum_base.html.jinja  index.html  index.html.jinja  login.html.jinja  post.html  post.html.jinja  thread.html.jinja  thread_index.html.jinja  user.html.jinja
templates/partial/: post.html.jinja  thread.html.jinja
