[package]
name = "lunachat"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = { version = "0.8.1", features = ["ws"] }
bincode = "1.3.3"
derive_more = { version = "2.0.1", features = ["deref", "deref_mut"] }
futures = "0.3.31"
itertools = "0.14.0"
serde = { version = "1.0.217", features = ["derive"] }
sled = "0.34.7"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17"
tower-http = { version = "0.6.2", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
