[package]
name = "dragon-fox"
version = "0.1.0"
edition = "2021"
default-run = "main"

[[bin]]
name = "migrate"
test = false
bench = false

[dependencies]
ammonia = "4.0.0"
argon2 = { version = "0.5.3", features = ["std"] }
askama = "0.12.1"
async-trait = "0.1.86"
axum = { version = "0.8.1", features = ["ws"] }
axum-htmx = "0.7.0"
axum-login = "0.17.0"
bincode = "1.3.3"
derive_more = { version = "2.0.1", features = ["deref", "deref_mut"] }
futures = "0.3.31"
itertools = "0.14.0"
lazy_static = "1.5.0"
password-auth = "1.0.0"
serde = { version = "1.0.217", features = ["derive"] }
sled = "0.34.7"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17"
tower-http = { version = "0.6.2", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
